--- a/templates/common/header.html
+++ b/templates/common/header.html
@@ -6,6 +6,7 @@
       <div class="col-md-5 col-lg-6 col-xl-7 my-1">
         <h1 class="h3 m-0 p-0">
           <a class="d-flex align-items-center text-decoration-none" href="{% url "home" %}">
+            <img src="{% static "img/logo-marianne.png" %}" alt="APpeL, République Française" height="75">
             <img src="{% static "img/logo-APpeL.svg" %}" alt="APpeL, République Française" height="75">
           </a>
         </h1>
