--- a/templates/index.html
+++ b/templates/index.html
@@ -12,7 +12,7 @@
   <div class="container py-3">
     <nav class="row">
 
-      <p>Here is my content... comming soon !</p>
+      <p>C'est ici que l'on affiche le contenu de la page !</p>
     </nav>
   </div>
 {% endblock %}
