Gestion de l'authentification de la plateforme APpeL : utilisation de l'authentification de base fournit par Django

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,8 @@
-{% extends "base.html" %}
+{% extends "layout/base.html" %}
 
 {% load static %}
 
 {% block page_title %}APpeL, la plateforme de conventionement des logements sociaux{% endblock%}
-
-{% block header %}
-  {% include "common/header.html" with dark=False %}
-{% endblock %}
 
 {% block content %}
   <div class="container py-3">
