texte en Français

--- a/templates/registration/password_reset_email.html
+++ b/templates/registration/password_reset_email.html
@@ -1,2 +1,7 @@
-Someone asked for password reset for email {{ email }}. Follow the link below:
+Bonjour {{username}}
+
+Vous avez demander la ré-initialisation de votre mot de passe associé au courriel {{ email }}
+Veuillez suivre le lien :
 {{ protocol}}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
+
+L'équipe APpeL
