--- a/templates/registration/logged_out.html
+++ b/templates/registration/logged_out.html
@@ -1,6 +1,6 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-  <p>Logged out!</p>
-  <a href="{% url 'login'%}">Click here to login again.</a>
+  <p>Vous êtes déconnecté !</p>
+  <a href="{% url 'login'%}">Cliquez ici pour vous identifiez une nouvelle fois.</a>
 {% endblock %}
