--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -3,15 +3,16 @@
 {% block content %}
 
   {% if form.errors %}
-    <p>Your username and password didn't match. Please try again.</p>
+    <p>Votre nom d'utilisateur et votre mot de passe de correspondent pas.</p>
+    <p>Veuillez essayer une nouvelle fois.</p>
   {% endif %}
 
   {% if next %}
     {% if user.is_authenticated %}
-      <p>Your account doesn't have access to this page. To proceed,
-      please login with an account that has access.</p>
+      <p>Vous n'avez pa accès à cette page.</p>
+      <p>Merci de vous connecter avec un compte qui a des droits suffisant ou raprochez vous de votre contact APpeL.</p>
     {% else %}
-      <p>Please login to see this page.</p>
+      <p>Merci de vous logger pour afficher cette page.</p>
     {% endif %}
   {% endif %}
 
@@ -19,11 +20,11 @@
     {% csrf_token %}
     <table>
       <tr>
-        <td>{{ form.username.label_tag }}</td>
+        <td>Nom d'utilisateur</td>
         <td>{{ form.username }}</td>
       </tr>
       <tr>
-        <td>{{ form.password.label_tag }}</td>
+        <td>Mot de passe</td>
         <td>{{ form.password }}</td>
       </tr>
     </table>
@@ -31,7 +32,6 @@
     <input type="hidden" name="next" value="{{ next }}" />
   </form>
 
-  {# Assumes you setup the password_reset view in your URLconf #}
-  <p><a href="{% url 'password_reset' %}">Lost password?</a></p>
+  <p><a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
 
 {% endblock %}
