--- a/templates/registration/password_reset_complete.html
+++ b/templates/registration/password_reset_complete.html
@@ -1,6 +1,6 @@
 {% extends "base_generic.html" %}
 
 {% block content %}
-  <h1>The password has been changed!</h1>
-  <p><a href="{% url 'login' %}">log in again?</a></p>
+  <h1>Votre mot de passe a été mis à jour !</h1>
+  <p><a href="{% url 'login' %}">Identifiez vous à nouveau ?</a></p>
 {% endblock %}
