--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -2,28 +2,29 @@
 
 {% block content %}
     {% if validlink %}
-        <p>Please enter (and confirm) your new password.</p>
+        <p>Veuillez saisir votre nouveau mot de passe et le confirmer.</p>
         <form action="" method="post">
         {% csrf_token %}
             <table>
                 <tr>
                     <td>{{ form.new_password1.errors }}
-                        <label for="id_new_password1">New password:</label></td>
+                        <label for="id_new_password1">Nouveau mot de passe:</label></td>
                     <td>{{ form.new_password1 }}</td>
                 </tr>
                 <tr>
                     <td>{{ form.new_password2.errors }}
-                        <label for="id_new_password2">Confirm password:</label></td>
+                        <label for="id_new_password2">Confirmation du mot de passe:</label></td>
                     <td>{{ form.new_password2 }}</td>
                 </tr>
                 <tr>
                     <td></td>
-                    <td><input type="submit" value="Change my password" /></td>
+                    <td><input type="submit" value="Modifier mon mot de passe" /></td>
                 </tr>
             </table>
         </form>
     {% else %}
-        <h1>Password reset failed</h1>
-        <p>The password reset link was invalid, possibly because it has already been used. Please request a new password reset.</p>
+        <h1>La modification de votre mot de passe a échoué</h1>
+        <p>Le Lien de modification de mot de passe est invalide, probablement parce qu'il a déjà été utilisé.</p>
+        <p>Veuillez ré-essayer de mettre à jour votre mot de passe en cliquant sur le lien <a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
     {% endif %}
 {% endblock %}
