--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,5 +1,6 @@
 {% extends "layout/base.html" %}
 
 {% block content %}
-  <p>We've emailed you instructions for setting your password. If they haven't arrived in a few minutes, check your spam folder.</p>
+  <p>Nous vous avons envoyé un couriel pour ré-initialiser votre mot de passe. </p>
+  <p>S'il n'est pas arrivé d'ici quelques minutes, merci de vérifier dans votre dossier 'spam'</p>
 {% endblock %}
