--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -6,7 +6,12 @@
   {% if form.email.errors %}
     {{ form.email.errors }}
   {% endif %}
-      <p>{{ form.email }}</p>
-    <input type="submit" class="btn btn-default btn-lg" value="Reset password">
+    <table>
+      <tr>
+        <td>Couriel</td>
+        <td>{{ form.email }}</td>
+      </tr>
+    </table>
+    <input type="submit" class="btn btn-default btn-lg" value="Ré-initialiser mon mot de passe">
   </form>
 {% endblock %}
