Implementation de la page login

--- a/templates/index.html
+++ b/templates/index.html
@@ -8,12 +8,12 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
       <div class="fr-grid-row fr-grid-row--gutters">
-          <div class="fr-col-lg-6 fr-col-offset-lg-1">
+          <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
               <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Créez votre projet de convention APL en quelques clics</h2>
               <p class="fr-mb-3w">
                 Via APpeL vous pourrez modifier, valider et transmettre votre projet de convention aux services instructeurs.
               </p>
-              <p class="fr-mb-5w">
+              <p class="fr-mb-3w">
                 {% include "common/login_button.html" %}
               </p>
           </div>
