--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -12,7 +12,7 @@
                           </p>
                       </div>
                       <div class="fr-header__operator">
-                          <img src="{% static "img/appel_logo.png" %}" class="fr-responsive-img" style="max-width:5rem;" alt="APpeL, conventionnement APL" />
+                          <img src="{% static "img/appel_logo.png" %}" class="fr-responsive-img" style="width:5rem;" alt="APpeL, conventionnement APL" />
                           <!-- L’alternative de l’image (attribut alt) doit impérativement être renseignée et reprendre le texte visible dans l’image -->
                       </div>
                       <div class="fr-header__navbar">
