--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -2,36 +2,51 @@
 
 {% block content %}
 
-  {% if form.errors %}
-    <p>Votre nom d'utilisateur et votre mot de passe de correspondent pas.</p>
-    <p>Veuillez essayer une nouvelle fois.</p>
-  {% endif %}
+{% if form.errors %}
+<p>Votre nom d'utilisateur et votre mot de passe de correspondent pas.</p>
+<p>Veuillez essayer une nouvelle fois.</p>
+{% endif %}
 
-  {% if next %}
-    {% if user.is_authenticated %}
-      <p>Vous n'avez pa accès à cette page.</p>
-      <p>Merci de vous connecter avec un compte qui a des droits suffisant ou raprochez vous de votre contact APpeL.</p>
-    {% else %}
-      <p>Merci de vous logger pour afficher cette page.</p>
-    {% endif %}
-  {% endif %}
+{% if next and user.is_authenticated %}
+  <p>Vous n'avez pas accès à cette page.</p>
+  <p>Merci de vous connecter avec un compte qui a des droits suffisant ou raprochez vous de votre contact APpeL.</p>
+{% endif %}
 
-  <form method="post" action="{% url 'login' %}">
-    {% csrf_token %}
-    <table>
-      <tr>
-        <td>Nom d'utilisateur</td>
-        <td>{{ form.username }}</td>
-      </tr>
-      <tr>
-        <td>Mot de passe</td>
-        <td>{{ form.password }}</td>
-      </tr>
-    </table>
-    <input type="submit" value="login" />
-    <input type="hidden" name="next" value="{{ next }}" />
-  </form>
+<div class="fr-container-fluid ds_banner">
+  <div class="fr-container">
+      <div class="fr-grid-row fr-grid-row--gutters">
+          <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
+              <h2 class="fr-mt-3w fr-mt-md-5w fr-mb-5w">Créez votre projet de convention APL en quelques clics</h2>
+              <p class="fr-mb-3w">
+                Via APpeL vous pourrez modifier, valider et transmettre votre projet de convention aux services instructeurs.
+              </p>
+          </div>
+          <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-py-4w fr-pb-0">
 
-  <p><a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+            <form method="post" action="{% url 'login' %}">
+              {% csrf_token %}
+              <div class="fr-mt-3w">
+                <label class="fr-label" for="username">Nom d'utilisateur</label>
+                <input class="fr-input" type="text" id="username" name="username">
+              </div>
+              <div class="fr-mt-3w">
+                <label class="fr-label" for="password">Mot de passe</label>
+                <input class="fr-input" type="password" id="password" name="password">
+              </div>
+              <div class="fr-mt-3w">
+                <button class="fr-btn" type="submit">
+                  Connexion
+                </button>
+                <input type="hidden" name="next" value="{{ next }}" />
+              </div>
+            </form>
+            <p><a href="{% url 'password_reset' %}">Mot de passe oublié ?</a></p>
+          </div>
+      </div>
+  </div>
+</div>
+<hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
+
+
 
 {% endblock %}
