--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,11 +1,10 @@
 {% extends "layout/base.html" %}
 
-{% block content %}
+{% block header %}
+{% include "layout/header.html" with without_action_button=True %}
+{% endblock %}
 
-{% if form.errors %}
-<p>Votre nom d'utilisateur et votre mot de passe de correspondent pas.</p>
-<p>Veuillez essayer une nouvelle fois.</p>
-{% endif %}
+{% block content %}
 
 {% if next and user.is_authenticated %}
   <p>Vous n'avez pas accès à cette page.</p>
@@ -25,13 +24,19 @@
 
             <form method="post" action="{% url 'login' %}">
               {% csrf_token %}
-              <div class="fr-mt-3w">
+              <div class="fr-input-group fr-mt-3w {% if form.errors %}fr-input-group--error{% endif %}">
                 <label class="fr-label" for="username">Nom d'utilisateur</label>
-                <input class="fr-input" type="text" id="username" name="username">
+                <input class="fr-input {% if form.errors %}fr-input--error{% endif %}" type="text" id="username" name="username">
+                {% if form.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  Votre nom d'utilisateur et votre mot de passe de correspondent pas.
+                  <br>Veuillez essayer une nouvelle fois.
+                </p>
+                {% endif %}
               </div>
-              <div class="fr-mt-3w">
+              <div class="fr-input-group fr-mt-3w {% if form.errors %}fr-input-group--error{% endif %}">
                 <label class="fr-label" for="password">Mot de passe</label>
-                <input class="fr-input" type="password" id="password" name="password">
+                <input class="fr-input {% if form.errors %}fr-input--error{% endif %}" type="password" id="password" name="password">
               </div>
               <div class="fr-mt-3w">
                 <button class="fr-btn" type="submit">
