Gérer les login et l'identification des Bailleurs vs Instructeurs

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -51,7 +51,7 @@
                             {% include "common/login_button.html" %}
                           </li>
                           <li>
-                              <button class="fr-btn fr-btn--secondary">
+                              <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'login' %}?instructeur=1'">
                                 <span class="fr-fi-account-line fr-mr-1w" aria-hidden="true">
                                 </span>Espace instructeur
                               </button>
