--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -15,7 +15,11 @@
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
       <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
-        {% include "common/main_presentation.html" %}
+        {% if request.GET.instructeur  %}
+        {% include "common/instructeur_presentation.html" %}
+        {% else %}
+        {% include "common/bailleur_presentation.html" %}
+        {% endif %}
       </div>
       <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-py-4w fr-pb-0">
         <form method="post" action="{% url 'login' %}">
