--- a/templates/conventions/step4.html
+++ b/templates/conventions/step4.html
@@ -4,13 +4,13 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
-      <div class="fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
+      <div class="fr-col-md-12 fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
         <h2 class="fr-mb-3w">Etape 4 - Programme : informations cadastrales</h2>
         <p class="fr-mb-3w">
           ...
         </p>
       </div>
-      <div class="fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
         {% include "common/button/precedent.html" with precedent='conventions:step3' %}
         {% include "common/button/suivant.html" with suivant='conventions:step5' %}
     </div>
