--- a/templates/conventions/stepfin.html
+++ b/templates/conventions/stepfin.html
@@ -4,14 +4,14 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
-      <div class="fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
+      <div class="fr-col-md-12 fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
         <h2 class="fr-mb-3w">Récapitulatif</h2>
         <p class="fr-mb-3w">
           ...This is the end !
           Voici les données que vous avez saisit
         </p>
       </div>
-      <div class="fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
         {% include "common/button/precedent.html" with precedent='conventions:step8' %}
         <div>
           <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:index' %}'">
