--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       <div class="fr-col-lg-6 fr-col-offset-lg-1 fr-mb-2w">
         {% include "common/bailleur_presentation.html" %}
         <p class="fr-mb-3w">
-          {% include "common/login_button.html" %}
+          {% include "common/button/login.html" %}
         </p>
       </div>
       <div class="fr-col-12 fr-col-lg-5 fr-pl-0 fr-pl-md-4w fr-pb-0">
@@ -61,7 +61,7 @@
           <div class="fr-container">
             <ul class="fr-btns-group fr-btns-group--inline fr-mb-3w">
               <li>
-                {% include "common/login_button.html" %}
+                {% include "common/button/login.html" %}
               </li>
               <li>
                   <button class="fr-btn fr-btn--secondary">
