--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -48,7 +48,7 @@
                       {% else %}
                         <ul class="fr-btns-group fr-btns-group--inline">
                           <li>
-                            {% include "common/login_button.html" %}
+                            {% include "common/button/login.html" %}
                           </li>
                           <li>
                               <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'login' %}?instructeur=1'">
