--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -4,34 +4,35 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
-
-
-      <form method="post" action="{% url 'conventions:step2' %}">
+      <form method="post" action="">
         {% csrf_token %}
-
-
-
-
         <div class="fr-col-md-12 fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
           <h2 class="fr-mb-3w">Etape 1 - Saisi du programme</h2>
           <p class="fr-mb-3w">
-            <label class="fr-label" for="select">
-              Séléctionnez votre programme et son financement
-            </label>
-            <select class="fr-select" id="select" name="select">
-              <option value="" selected disabled hidden>Selectionnez une option</option>
-              {% for lot in programmes %}
-              <option value="{{lot.id}}">
-                {{ lot.programme.nom }} - {{ lot.financement }} - {{ lot.programme.ville}} - {{lot.programme.nb_logements}} lgts
-              </option>
+            <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
+              <label class="fr-label" for="{{form.renewal_date.id_for_label}}">
+                Séléctionnez votre programme et son financement
+              </label>
+              <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" selected="{{form.lot_uuid.value}}" id="lot_uuid" name="lot_uuid">
+                <option value="" selected disabled hidden>Selectionnez une option</option>
+                {% for lot in programmes %}
+                <option value="{{lot.uuid}}" {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}>
+                  {{ lot.programme.nom }} - {{ lot.financement }} - {{ lot.programme.ville}} - {{lot.programme.nb_logements}} lgts
+                </option>
+                {% endfor %}
+              </select>
+              {% for error in form.lot_uuid.errors %}
+              <p id="select-error-desc-error" class="fr-error-text">
+                {{ error }}
+              </p>
               {% endfor %}
-            </select>
+            </div>
           </p>
         </div>
         <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-          <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:index' %}'">
+          <a class="fr-btn fr-btn--secondary" href='{% url 'conventions:index' %}'>
             Annulé
-          </button>
+          </a>
           {% include "common/button/suivant_submit.html" with suivant='conventions:step2' %}
         </div>
       </form>
