--- a/templates/common/button/precedent.html
+++ b/templates/common/button/precedent.html
@@ -1,3 +1,9 @@
+{% if convention_uuid %}
+<button class="fr-btn" onclick="location.href='{% url precedent convention_uuid=convention_uuid %}'">
+  <span class="fr-fi-arrow-left-s-line fr-mr-1w" aria-hidden="true"></span>Précédent
+</button>
+{% else %}
 <button class="fr-btn" onclick="location.href='{% url precedent %}'">
   <span class="fr-fi-arrow-left-s-line fr-mr-1w" aria-hidden="true"></span>Précédent
 </button>
+{% endif %}
