--- a/templates/conventions/stepfin.html
+++ b/templates/conventions/stepfin.html
@@ -11,16 +11,16 @@
           Voici les données que vous avez saisit
         </p>
       </div>
-      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
-        {% include "common/button/precedent.html" with precedent='conventions:step8' %}
-        <div>
-          <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:index' %}'">
-            Enregistrer le Brouillon
-          </button>
-          <button class="fr-btn" onclick="location.href='{% url 'conventions:index' %}'">
-            Soumettre au service instructeur
-          </button>
-        </div>
+    </div>
+    <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+      {% include "common/button/precedent.html" with precedent='conventions:step8' convention_uuid=convention_uuid %}
+      <div>
+        <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'conventions:index' %}'">
+          Enregistrer le Brouillon
+        </button>
+        <button class="fr-btn" onclick="location.href='{% url 'conventions:index' %}'">
+          Soumettre au service instructeur
+        </button>
       </div>
     </div>
   </div>
