--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -10,10 +10,10 @@
           <h2 class="fr-mb-3w">Etape 1 - Saisi du programme</h2>
           <p class="fr-mb-3w">
             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
-              <label class="fr-label" for="{{form.renewal_date.id_for_label}}">
+              <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
                 Séléctionnez votre programme et son financement
               </label>
-              <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" selected="{{form.lot_uuid.value}}" id="lot_uuid" name="lot_uuid">
+              <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid">
                 <option value="" selected disabled hidden>Selectionnez une option</option>
                 {% for lot in programmes %}
                 <option value="{{lot.uuid}}" {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}>
