--- a/templates/conventions/step2.html
+++ b/templates/conventions/step2.html
@@ -4,15 +4,149 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
-      <div class="fr-col-md-12 fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
-        <h2 class="fr-mb-3w">Etape 2 - Information bailleur</h2>
-        <p class="fr-mb-3w">
-          ...
-          convention id = {{convention_uuid}}
-        </p>
+      <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
+        <h2 class="fr-mb-3w">Etape 2 - Identité du signataire</h2>
+
+
+        <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+          <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+            Nom du bailleur
+          </label>
+          <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+          {% for error in form.MYFIELD.errors %}
+          <p id="text-input-error-desc-error" class="fr-error-text">
+            {{ error }}
+          </p>
+          {% endfor %}
+        </div>
+
+
+        <div class="fr-mb-2w">
+          <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  SIREN
+                </label>
+                <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  Capital social
+                </label>
+                <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+          <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+            Adresse
+          </label>
+          <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+          {% for error in form.MYFIELD.errors %}
+          <p id="text-input-error-desc-error" class="fr-error-text">
+            {{ error }}
+          </p>
+          {% endfor %}
+        </div>
+
+
+        <div class="fr-mb-2w">
+          <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  Code postal
+                </label>
+                <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  Ville
+                </label>
+                <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+          <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+            Nom du directeur générale
+          </label>
+          <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+          {% for error in form.MYFIELD.errors %}
+          <p id="text-input-error-desc-error" class="fr-error-text">
+            {{ error }}
+          </p>
+          {% endfor %}
+        </div>
+
+
+        <div class="fr-mb-2w">
+          <div class="fr-grid-row fr-grid-row--gutters">
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  Fonction du directeur general
+                </label>
+                <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" aria-describedby="text-input-error-desc-error" type="text" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+            <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-pl-md-1w fr-mb-2w">
+              <div class="fr-input-group {% if form.MYFIELD.errors %}fr-select-group--error{% endif %}">
+                <label class="fr-label" for="{{form.MYFIELD.id_for_label}}">
+                  Date de délibération
+                </label>
+                <div class="fr-input-wrap fr-fi-calendar-line fr-mt-1w" >
+                  <input class="fr-input {% if form.MYFIELD.errors %}fr-input--error{% endif %}" type="date" id="{{form.MYFIELD.id_for_label}}" name="{{form.MYFIELD.id_for_label}}">
+                </div>
+                {% for error in form.MYFIELD.errors %}
+                <p id="text-input-error-desc-error" class="fr-error-text">
+                  {{ error }}
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+          </div>
+        </div>
+
+
       </div>
     </div>
-    <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
+    <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
       {% include "common/button/precedent.html" with precedent='conventions:step1_update' convention_uuid=convention_uuid %}
       {% include "common/button/suivant.html" with suivant='conventions:step3' convention_uuid=convention_uuid %}
     </div>
