--- a/templates/conventions/step3.html
+++ b/templates/conventions/step3.html
@@ -4,8 +4,8 @@
 <div class="fr-container-fluid ds_banner">
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
-      <div class="fr-col-md-12 fr-col-lg-11 fr-col-offset-lg-1 fr-my-5w">
-        <h2 class="fr-mb-3w">Etape 3 - Programme : informations générales</h2>
+      <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
+        <h2 class="fr-mb-3w">Etape 3 - Nature du programme immobilier</h2>
         <p class="fr-mb-3w">
           ...
         </p>
