--- a/templates/conventions/index.html
+++ b/templates/conventions/index.html
@@ -13,7 +13,7 @@
         <p class="fr-mb-3w">
           Commencer une nouvelle convention dès à présent
         </p>
-        <button class="fr-btn">
+        <button class="fr-btn" onclick="location.href='{% url 'conventions:step1' %}'">
           <span class="fr-fi-edit-line fr-mr-1w" aria-hidden="true"></span>Créer une nouvelle convention
         </button>
         {% elif request.user.is_instructeur or request.user.is_staff %}
@@ -29,12 +29,41 @@
 <hr class="fr-grid-row fr-col-xs-10 fr-col-7 fr-my-7w">
 <div class="fr-container">
   <div class="fr-grid-row fr-grid-row--gutters">
-    <div class="fr-col-lg-10 fr-col-offset-lg-1">
-        <h2 class="fr-mb-3w">Toutes mes conventions</h2>
-    </div>
-    <div class="fr-col-lg-10 fr-col-offset-lg-1">
+    <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1">
       {% if conventions %}
-      {{ conventions }}
+      <div class="fr-table fr-table--bordered">
+        <table>
+            <caption>Toutes mes conventions</caption>
+            <thead>
+            <tr>
+              {% if request.user.is_instructeur %}
+              <th scope="col">Bailleur</th>
+              {% endif %}
+              <th scope="col">Programme</th>
+              <th scope="col">Financement</th>
+              <th scope="col">Statut</th>
+              <th scope="col">Action</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for convention in conventions %}
+            <tr>
+              {% if request.user.is_instructeur %}
+              <td>{{convention.bailleur.nom}}</td>
+              {% endif %}
+              <td>{{convention.programme.nom}}</td>
+              <td>{{convention.financement}}</td>
+              <td>{{convention.statut}}</td>
+              <td>
+                <button class="fr-btn fr-fi-edit-line" title="Modifier votre convention" onclick="location.href='{% url 'conventions:step1_update' convention_uuid=convention.uuid %}'"">
+                  Edit
+               </button>
+              </td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+      </div>
       {% else %}
       <p>Vous n'avez pas encore de conventions...</p>
       {% endif %}
