--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -16,7 +16,10 @@
               <select class="fr-select {% if form.lot_uuid.errors %}fr-select--error{% endif %}" id="lot_uuid" name="lot_uuid">
                 <option value="" selected disabled hidden>Selectionnez une option</option>
                 {% for lot in programmes %}
-                <option value="{{lot.uuid}}" {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}>
+                <option
+                  value="{{lot.uuid}}"
+                  {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
+                  {% if lot.convention_set.all %}disabled="disabled"{% endif %}>
                   {{ lot.programme.nom }} - {{ lot.financement }} - {{ lot.programme.ville}} - {{lot.programme.nb_logements}} lgts
                 </option>
                 {% endfor %}
