--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -19,7 +19,7 @@
                 <option
                   value="{{lot.uuid}}"
                   {% if lot.uuid|stringformat:"s"  == form.lot_uuid.value %}selected{% endif %}
-                  {% if lot.convention_set.all %}disabled="disabled"{% endif %}>
+                  {% if lot.convention_set.all and lot.uuid|stringformat:"s"  != form.lot_uuid.value %}disabled="disabled"{% endif %}>
                   {{ lot.programme.nom }} - {{ lot.financement }} - {{ lot.programme.ville}} - {{lot.programme.nb_logements}} lgts
                 </option>
                 {% endfor %}
