Afficher le Nom complet de l'utilisateur dans l'ent^te quand il est disponible

--- a/templates/layout/header.html
+++ b/templates/layout/header.html
@@ -37,7 +37,7 @@
                         <ul class="fr-links-group">
                           <li class="fr-mx-3w">
                           Bonjour
-                          <strong>{{ user.username }}</strong>
+                          <strong>{{ user }}</strong>
                         </li>
                         <li>
                           <button class="fr-btn fr-btn--secondary" onclick="location.href='{% url 'logout' %}'">
