Ajout de l'étape Financement

--- a/templates/conventions/step2.html
+++ b/templates/conventions/step2.html
@@ -33,7 +33,7 @@
               <div class="fr-col-12 fr-col-md-12 fr-col-lg-6 fr-mb-2w">
                 <div class="fr-input-group {% if form.siret.errors %}fr-select-group--error{% endif %}">
                   <label class="fr-label" for="{{form.siret.id_for_label}}">
-                    SIRET
+                    SIRET ou SIREN
                   </label>
                   <input
                     class="fr-input {% if form.siret.errors %}fr-input--error{% endif %}"
