--- a/templates/conventions/step8.html
+++ b/templates/conventions/step8.html
@@ -5,7 +5,7 @@
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
       <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-        <h2 class="fr-mb-3w">Etape 8 - Ajouter des informations à l'attention du service instructeur</h2>
+        <h2 class="fr-mb-3w">Etape 8 - Stationnements</h2>
         <p class="fr-mb-3w">
           ...
         </p>
@@ -13,7 +13,7 @@
     </div>
     <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-py-5w" style="display: flex;flex-direction: row;align-items: center;justify-content: space-between;">
       {% include "common/button/precedent.html" with precedent='conventions:step7' convention_uuid=convention_uuid %}
-      {% include "common/button/suivant.html" with suivant='conventions:stepfin' convention_uuid=convention_uuid %}
+      {% include "common/button/suivant.html" with suivant='conventions:step9' convention_uuid=convention_uuid %}
     </div>
   </div>
 </div>
