--- a/templates/conventions/step1.html
+++ b/templates/conventions/step1.html
@@ -7,7 +7,7 @@
       {% csrf_token %}
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-          <h2 class="fr-mb-3w">Etape 1 - Saisi du programme</h2>
+          <h2 class="fr-mb-3w">Etape 1/{{ nb_steps }} - Saisi du programme</h2>
           <p class="fr-mb-3w">
             <div class="fr-select-group {% if form.lot_uuid.errors %}fr-select-group--error{% endif %}">
               <label class="fr-label" for="{{form.lot_uuid.id_for_label}}">
