--- a/templates/conventions/step2.html
+++ b/templates/conventions/step2.html
@@ -7,7 +7,7 @@
       {% csrf_token %}
       <div class="fr-grid-row fr-grid-row--gutters">
         <div class="fr-col-12 fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-          <h2 class="fr-mb-3w">Etape 2 - Identité du signataire</h2>
+          <h2 class="fr-mb-3w">Etape 2/{{ nb_steps }} - Identité du signataire</h2>
 
 
           <div class="fr-input-group {% if form.nom.errors %}fr-select-group--error{% endif %}">
