--- a/templates/conventions/step9.html
+++ b/templates/conventions/step9.html
@@ -5,7 +5,7 @@
   <div class="fr-container">
     <div class="fr-grid-row fr-grid-row--gutters">
       <div class="fr-col-md-12 fr-col-lg-10 fr-col-offset-lg-1 fr-my-5w">
-        <h2 class="fr-mb-3w">Etape 9 - Ajouter des informations à l'attention du service instructeur</h2>
+        <h2 class="fr-mb-3w">Etape 9/{{ nb_steps }} - Ajouter des informations à l'attention du service instructeur</h2>
         <p class="fr-mb-3w">
           ...
         </p>
